--- a/app.json
+++ b/app.json
@@ -9,10 +9,10 @@
     "platforms": ["android", "ios", "web"],
     "githubUrl": "https://github.com/Webjayjf/stentguardexpoapp",
     "orientation": "portrait",
-    "primaryColor": "#2a2a2a",
+    "primaryColor": "#ADD8E6",
     "icon": "aa.png",
     "splash": {
-      "backgroundColor": "#2a2a2a",
+      "backgroundColor": "#ADD8E6",
       "image": "aa.png",
       "resizeMode": "contain"
     },
